complex/k8s/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata: 
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 2
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: mosabami/multi-server:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
