complex/k8s/redis-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
spec:
  ports:
  - port: 6379
    name: redis
  clusterIP: None
  selector:
    component: redis
